--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -18,7 +18,7 @@
     padding: 15px 20px 0 0;
   }
 
-  nav .box__button {
+  nav .box__btn {
     display: none;
   }
 
@@ -34,41 +34,41 @@
     padding: 10px 0 0 0;
   }
 
-  nav .box__menu ul {
+  nav .box__menu__list {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  nav .box__menu ul li span {
+  nav .box__menu__list span {
     color: #ffffff;
   }
 
-  nav .box__menu .menu__login {
+  nav .box__menu__login {
     display: flex;
     flex-direction: row;
     height: 100%;
   }
 
-  nav .menu__login button:first-child {
+  nav .box__menu__login button:first-child {
     background-color: transparent;
     color: #ffffff;
   }
 
-  nav .menu__login button:last-child {
+  nav .box__menu__login button:last-child {
     background: hsl(0, 0%, 100%);
     color: hsl(353, 100%, 62%);
   }
 
-  nav .box__menu .menu__login::before {
+  nav .box__menu__login::before {
     display: none;
   }
 
-  nav .box__menu ul li ul {
+  nav .box__menu__links {
     background-color: #ffffff;
     margin-top: 15px;
     padding: 15px 0;
-    color: hsl(237, 23%, 32%);
+
     font-size: 0.8em;
     font-weight: 300;
     text-align: left;
@@ -77,9 +77,6 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   }
 
-  nav .box__menu ul li ul li:hover {
-    color: #000000;
-  }
   .show {
     position: absolute;
   }
