--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,10 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
   font-size: 16px;
