--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -68,7 +68,6 @@
     background-color: #ffffff;
     margin-top: 15px;
     padding: 15px 0;
-
     font-size: 0.8em;
     font-weight: 300;
     text-align: left;
@@ -184,7 +183,7 @@
 
   /* BOT */
 
-  .section-bottom {
+  .section-bot {
     width: 80%;
     margin: 20px auto;
     position: relative;
@@ -192,11 +191,11 @@
     display: flex;
     justify-content: flex-end;
   }
-  .section-bottom .mobile {
+  .section-bot .mobile {
     display: none;
   }
 
-  .section-bottom .desktop {
+  .section-bot .desktop {
     display: block;
     position: absolute;
     top: 80px;
@@ -204,17 +203,17 @@
     width: 90%;
   }
 
-  .section-bottom div {
+  .section-bot div {
     width: 52%;
     padding-left: 85px;
     text-align: left;
   }
 
-  .section-bottom div h3 {
+  .section-bot div h3 {
     font-size: 2em;
     padding: 50px 0 25px 0;
   }
-  .section-bottom div p {
+  .section-bot div p {
     width: 100%;
     font-size: 1em;
   }
