--- a/styles/section.css
+++ b/styles/section.css
@@ -1,17 +1,17 @@
 /* Section */
 
 section div {
+  padding: 0 20px;
   text-align: center;
   width: 100%;
-  padding: 0 20px;
 }
 
 section h2 {
+  color: hsl(208, 49%, 24%);
+  font-family: "Overpass", sans-serif;
+  font-size: 1.8em;
   padding: 80px 0;
   text-align: center;
-  font-size: 1.8em;
-  font-family: "Overpass", sans-serif;
-  color: hsl(208, 49%, 24%);
 }
 
 section div h3 {
@@ -22,13 +22,13 @@ section div h3 {
 }
 
 section div p {
-  font-family: "Overpass", sans-serif;
   color: hsl(207, 13%, 34%);
+  font-family: "Overpass", sans-serif;
   font-size: 0.9em;
   font-weight: 400;
   line-height: 1.9em;
-  width: 80%;
   margin: 0 auto;
+  width: 80%;
 }
 
 .section-top {
@@ -43,17 +43,16 @@ section div p {
 }
 
 .section-mid {
-  margin-top: 250px;
-  padding: 70px 0;
-  background-color: hsl(237, 17%, 21%);
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  position: relative;
   background: url("../images/bg-pattern-circles.svg") top -250px left -100px /
       600px no-repeat,
     linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%));
   border-radius: 0 70px 0 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 250px;
+  padding: 70px 0;
+  position: relative;
 }
 
 .section-mid__img {
@@ -62,16 +61,16 @@ section div p {
 }
 
 .section-mid__img img {
+  left: 10px;
   position: absolute;
   top: -250px;
-  left: 10px;
   width: 350px;
 }
 
 .section-mid div {
+  color: hsl(0, 0%, 100%);
   padding-top: 50px;
   width: 100%;
-  color: hsl(0, 0%, 100%);
 }
 
 .section-mid p {
@@ -80,17 +79,17 @@ section div p {
 }
 
 .section-mid h3 {
-  font-size: 2rem;
   color: hsl(0, 0%, 100%);
+  font-size: 2rem;
 }
 
-.section-bottom {
+.section-bot {
   padding: 40px 0;
 }
 
-.section-bottom .mobile {
+.section-bot .mobile {
   width: 100%;
 }
-.section-bottom .desktop {
+.section-bot .desktop {
   display: none;
 }
